[gd_scene load_steps=2 format=3 uid="uid://umnex4p7msdu"]

[ext_resource type="Script" path="res://scripts/scenes/options_menu.gd" id="1_script"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TabContainer" type="TabContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
current_tab = 0

[node name="Video" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 20
metadata/_tab_index = 0

[node name="FullscreenLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/TabContainer/Video"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenToggle" type="CheckButton" parent="CenterContainer/PanelContainer/MarginContainer/TabContainer/Video"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/TabContainer/Video"]
layout_mode = 2
text = "Resolution (Windowed Mode)"

[node name="ResolutionOptionButton" type="OptionButton" parent="CenterContainer/PanelContainer/MarginContainer/TabContainer/Video"]
unique_name_in_owner = true
layout_mode = 2

[node name="Audio" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20
metadata/_tab_index = 1

[node name="MuteLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/TabContainer/Audio"]
layout_mode = 2
text = "Mute Audio"

[node name="MuteToggle" type="CheckButton" parent="CenterContainer/PanelContainer/MarginContainer/TabContainer/Audio"]
unique_name_in_owner = true
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/TabContainer/Audio"]
layout_mode = 2
text = "Master Volume"

[node name="VolumeSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/TabContainer/Audio"]
unique_name_in_owner = true
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Back"
